# h2ogpte_langgraph_demo

./: .env.example  .gitignore  HITL_GUIDE.md  README.md  create_collections.py  makefile  pyproject.toml
references/: README.md
references/entity_docs/: borrower_profile.json  customer_market_position.json  facility_covenant.json  financial_statements.json
references/market_docs/: competitive_intelligence.json  economic_outlook.json  sector_analysis.json
references/policy_docs/: covenant_library.json  credit_policy.json  exemplar_memo.json  rating_methodology.json
src/agent/: example_h2ogpte_node.py  graph.py  h2ogpte_nodes.py
