[project]
name = "h2ogpte-langgraph-demo"
version = "0.1.0"
description = "A demo showcasing the integration of H2OGPTE with LangGraph for building advanced AI workflows"
readme = "README.md"
authors = [
    {name = "Issac Liu", email = "issac.liu@h2o.ai"}
]
requires-python = ">=3.12"
dependencies = [
    "h2ogpte>=1.6.39",
    "langgraph>=0.6.6",
    "langgraph-cli[inmem]>=0.4.0",
    "python-dotenv>=1.0.0",
]


[dependency-groups]
dev = [
    "ruff>=0.12.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
